--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,23 @@ h2{
   font-weight: 200;
   margin: 0 0 20px 0;
 }
+
+.exp-heading h2 {
+  font-size: 25px;
+  font-style: bold;
+  font-family: "Quicksand", Arial, sans-serif;
+  font-weight: 500; }
+  
+.exp-heading h3 {
+  font-size: 20px;
+  font-family: "Quicksand", Arial, sans-serif;
+  font-weight: 500; }
+  
+.exp-heading  p {
+  margin-bottom: 0.1em;
+    color: black;
+}
+
 h3{
     color: #000;
   font-family: "Playfair Display", Georgia, serif;
@@ -195,7 +212,7 @@ figure {
             transform: scaleX(0);
             -webkit-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             -moz-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            -ms-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            -ms-transition: all 0ogo-img.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             -o-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
           #colorlib-aside #colorlib-main-menu ul li a:hover {
@@ -475,6 +492,17 @@ body.offcanvas {
   margin: 0 auto;
   margin-bottom: 20px;
   border: 3px solid white;}
+  
+.exp-img {
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  border: 3px solid white;}
 
 .colorlib-heading {
   font-size: 18px;
@@ -593,7 +621,7 @@ margin-left: 10px;}
   letter-spacing: 1px;
   text-transform: uppercase;
   font-family: "Quicksand", Arial, sans-serif;
-  background-color: #2c98f0;
+  background-color: #000000;
   color: #fff;
   position: relative;
   -webkit-box-shadow: none !important;
