--- a/css/style.css
+++ b/css/style.css
@@ -517,6 +517,17 @@ body.offcanvas {
   margin: 0 auto;
   margin-bottom: 20px;
   border: 3px solid white;}
+  
+.micro-img {
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  position: relative;
+  width: 180px;
+  height: 100px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  border: 3px solid white;}
 
 .colorlib-heading {
   font-size: 18px;
